// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscriptionTable component given a bronze plan with state: isFreePlan=false, upgradable=true, isTrialPlan=false has Upgrade and Manage buttons 1`] = `
Array [
  Object {
    "href": "http://test.host/plan/upgrade/bronze",
    "text": "Upgrade",
  },
  Object {
    "href": "https://customers.gitlab.com/subscriptions",
    "text": "Manage",
  },
]
`;

exports[`SubscriptionTable component given a free plan with state: isFreePlan=true, upgradable=true, isTrialPlan=false has Upgrade and Manage buttons 1`] = `
Array [
  Object {
    "href": "http://test.host/plan/upgrade/free",
    "text": "Upgrade",
  },
  Object {
    "href": "https://customers.gitlab.com/subscriptions",
    "text": "Manage",
  },
]
`;

exports[`SubscriptionTable component given a gold plan with state: isFreePlan=false, upgradable=false, isTrialPlan=false has Manage button 1`] = `
Array [
  Object {
    "href": "https://customers.gitlab.com/subscriptions",
    "text": "Manage",
  },
]
`;

exports[`SubscriptionTable component given a trial-gold plan with state: isFreePlan=false, upgradable=false, isTrialPlan=true has Manage button 1`] = `
Array [
  Object {
    "href": "https://customers.gitlab.com/subscriptions",
    "text": "Manage",
  },
]
`;

exports[`SubscriptionTable component when created matches the snapshot 1`] = `
<div>
  <gl-loading-icon-stub
    class="prepend-top-10 append-bottom-10"
    color="orange"
    label="Loading subscriptions"
    size="3"
  />
</div>
`;
